@@ -1,3 +1,6 @@
+2011-09-02
+* fix bugs in extraction code using xgettext
+
 2011-08-29
 * ignore strings that will not significantly contribute to a score in the
 ranking algorithm. This speeds up the algorithm by vast amounts.
